Dcreator/src/objects/payment__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_Type__c</fullName>
        <label>Card Type</label>
        <picklist>
            <picklistValues>
                <fullName>Visa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Master</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Confirmation_no__c</fullName>
        <label>Confirmation no</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Name_on_card__c</fullName>
        <label>Name on card</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_on_card__c</fullName>
        <label>Number on card</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Secure__c</fullName>
        <externalId>true</externalId>
        <label>Secure code(last 3 digits)</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Student__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Student</label>
        <referenceTo>Student__c</referenceTo>
        <relationshipLabel>payments</relationshipLabel>
        <relationshipName>payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zipcode__c</fullName>
        <label>Zipcode</label>
        <precision>6</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>card_expiry__c</fullName>
        <label>Card Expiry Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>city__c</fullName>
        <label>city</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>payment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>payment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>payments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>